--- a/telenursing_web_gui/web/html/MainGUIPage.html
+++ b/telenursing_web_gui/web/html/MainGUIPage.html
@@ -2,6 +2,7 @@
 <head>
   <link rel='stylesheet' type='text/css' href='../css/GUINavBar.css'>
   <link rel='stylesheet' type='text/css' href='../css/MainPageThreeColumn.css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/joy.js"></script>
 </head>
 
