--- a/telenursing_web_gui/web/html/TaskControlView.html
+++ b/telenursing_web_gui/web/html/TaskControlView.html
@@ -3,6 +3,7 @@
   <link rel='stylesheet' type='text/css' href='../css/GUINavBar.css'>
   <link rel='stylesheet' type='text/css' href='../css/MainPageThreeColumn.css'>
   <script src="../js/joy.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <div class="navbar">
