add active page state variable and ROS publishers

--- a/telenursing_web_gui/web/html/MainGUIPage.html
+++ b/telenursing_web_gui/web/html/MainGUIPage.html
@@ -4,6 +4,7 @@
   <link rel='stylesheet' type='text/css' href='../css/MainPageThreeColumn.css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/joy.js"></script>
+  <script src="../js/MobileCTRLPageReady.js"></script>
 </head>
 
 <div class="navbar">
