WIP: More progress on iframe state manager

--- a/telenursing_web_gui/web/html/MainGUIPage.html
+++ b/telenursing_web_gui/web/html/MainGUIPage.html
@@ -5,6 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/joy.js"></script>
   <script src="../js/MobileCTRLPageReady.js"></script>
+  <script src="../js/MobileCTRLPage_StateManager.js"></script>
 </head>
 
 <div class="navbar">
