--- a/telenursing_web_gui/web/html/MainGUIPage.html
+++ b/telenursing_web_gui/web/html/MainGUIPage.html
@@ -2,6 +2,7 @@
 <head>
   <link rel='stylesheet' type='text/css' href='../css/GUINavBar.css'>
   <link rel='stylesheet' type='text/css' href='../css/MainPageThreeColumn.css'>
+  <link rel='stylesheet' type='text/css' href='../css/buttonSizing.css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/joy.js"></script>
   <script src="../js/MobileCTRLPageReady.js"></script>
@@ -25,6 +26,15 @@
 	</div>
 
 </section>
+
+<section class="columns">
+        <div class="column" align="center">
+                <h2>Swap Primary and Secondary Streams</h2>
+        	<button class="button buttonMax" onclick="swapStreams()">Swap!</button>
+	</div>
+	<script src="../js/swapStreams.js"></script>
+</section>
+
 
 <section class="columns">
 	<div class="column" align="center">
